# ReproducibleQuantitativeDataScience-2024

./: pyproject.toml
provenance/: MelsIceCreamHabits.csv  ProvenanceInPractice.ipynb
