[tool.poetry]
name = "reproduciblequantitativedatascience-2024"
version = "0.1.0"
description = ""
authors = ["Angel L. P. <59593766+angelphanth@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.0"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
